@@ -1,3 +1,7 @@
+** v4.45, 10.02.2020**
+* Fix errors on install, if ElvUI install is not finished:
+  always make sure you finish first the ElvUI install!!
+
 ** v4.44, 08.02.2020**
 * Add '/muierrors on' and '/muierrors off' commands to quickly disable/enable only ElvUI + my AddOn.
 * Try to fix a talent skin error.
